# auto_compute

./: .gitignore  Cargo.toml  README.md  test.sh
compute/: Cargo.toml
compute-macro/: Cargo.toml
compute-macro/src/: equation.rs  field.rs  lib.rs  symbols.rs
compute/src/: element.rs  equation.rs  error.rs  lib.rs  unknown.rs
logger/: Cargo.toml
logger/src/: lib.rs
src/: element.rs  equation.rs  lib.rs  main.rs  unknown.rs
tests/: auto_compute_tests.rs  compilation.rs  lib.rs
tests/compilation/: no_function_auto_compute.rs  no_function_auto_compute.stderr  no_named_fields.rs  no_named_fields.stderr  no_variable.rs  no_variable.stderr  not_a_struct.rs  not_a_struct.stderr
