[package]

name = "auto_compute"
version = "0.1.0"
authors = ["Antoine Mencière <antoine.menciere@gmail.com>"]

[dependencies]

compute = { path = "compute" }
compute-macro = { path = "compute-macro" }
logger = { path = "logger" }

[features]

debug-equation-structure = ["logger/debug-equation-structure"]

debug-all = ["debug-equation-structure"]
