[package]

name = "auto_compute"
version = "0.1.0"
authors = ["Antoine Mencière <antoine.menciere@gmail.com>"]
edition = "2021"

[dependencies]

compute = { path = "compute" }
compute-macro = { path = "compute-macro" }
logger = { path = "logger" }

[features]

debug-structure = ["logger/debug-structure"]
debug-setup = ["logger/debug-setup"]
debug-compute = ["logger/debug-compute"]

debug-all = ["debug-structure", "debug-setup", "debug-compute"]

[dev-dependencies]
trybuild = "1.0"
